# blindenhund-dimos

./: README.md  README.md.save  README.txt
dimos/: README.md
dimos/assets/: trimmed_video_office.mov
dimos/dimos/web/websocket_vis/static/js/: clientside.js
dimos/docker/unitree/agents/: Dockerfile
dimos/docker/unitree/agents_interface/: Dockerfile
dimos/docker/unitree/ros/: Dockerfile
dimos/docker/unitree/ros_dimos/: Dockerfile
dimos/tests/: agent_manip_flow_fastapi_test.py  agent_manip_flow_flask_test.py  colmap_test.py  simple_agent_test.py  test_agent.py  test_move_vel_unitree.py  test_planning_agent_web_interface.py  test_planning_robot_agent.py  test_standalone_chromadb.py  test_standalone_fastapi.py  test_standalone_openai_json.py  test_standalone_openai_json_struct.py  test_standalone_openai_json_struct_func.py  test_standalone_openai_json_struct_func_playground.py  test_standalone_project_out.py  test_standalone_rxpy_01.py  test_unitree_agent.py  test_unitree_agent_queries_fastapi.py
go2_ws/src/go2_bringup/: CMakeLists.txt  package.xml  setup.py
go2_ws/src/go2_bringup/launch/: full_sim.launch.py
